--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,11 +1,20 @@
 $flex: flex;
 
+    // Color
+    $bl:black;
+
+
+
 header {
   display: $flex;
   flex-direction: column;
+  background-color: lightblue;
+  color:$bl ;
+  text-align: center;
   nav {
     display: $flex;
     justify-content: space-between;
+    margin: 2% 5%;
    ul {
     display: $flex;
     list-style: none;
@@ -15,4 +24,26 @@ header {
       }
    }
   }
+}
+
+
+
+.art{
+    max-width: 35%;
+
+}
+
+section{
+    width: 90%;
+    margin:auto;
+    display: $flex;
+}
+.right{
+    justify-content: flex-end;
+}
+.left{
+    justify-content: flex-start ;
+}
+.center{
+    justify-content: center;
 }
