--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,10 +1,15 @@
 $flex: flex;
-
     // Color
     $bl:black;
-
-
-
+h1,h2,h3,h4,h5 {
+  font-weight: bold;
+}
+h2 {
+  font-size: 1.5rem;
+}
+h5 {
+  font-size: 1rem;
+}
 header {
   display: $flex;
   flex-direction: column;
@@ -23,16 +28,24 @@ header {
       margin-right: 1rem;
       }
    }
+   ul:first-of-type {
+     padding-left: 10%;
+   }
+  }
+  .img_titre {
+    align-self: center;
+    width: 8%;
+    height: auto;
+    border-radius: 100%;
   }
 }
-
-
-
-.art{
-    max-width: 35%;
-
+header :nth-child(n+1) {
+  margin-bottom: 1.5rem;
 }
-
+.art{
+    max-width: 40%;
+    margin: 2rem;
+}
 section{
     width: 90%;
     margin:auto;
