--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,4 +1,15 @@
 $flex: flex;
+@mixin button{
+
+    background-color: white;
+    display: inline-block;
+    height: 58px;
+    width: 20%;
+    align-self: center;
+    border: none;
+    border-radius: 5px;
+
+}
     // Color
     $bl:black;
 h1,h2,h3,h4,h5 {
@@ -14,7 +25,7 @@ header {
   display: $flex;
   flex-direction: column;
   background-color: lightblue;
-  color:$bl ;
+  color:$bl;
   text-align: center;
   nav {
     display: $flex;
@@ -57,6 +68,21 @@ section{
 .left{
     justify-content: flex-start ;
 }
+button{
+    @include button;
+    
+}
 .center{
-    justify-content: center;
+    width: 90%;
+    margin:auto;
+    flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 6%;
+    button{
+        @include button;
+        background-color: green;
+
+    }
 }
